# local-agentic-rag

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  README_JA.md  README_JP.md  config.yaml  docker-compose.yaml  plan.md  pyproject.toml
archive/: plan.md
levels/level_01_prompt_only/: .gitignore  README.md  config.yaml  main.py  pyproject.toml  rxconfig.py
levels/level_01_prompt_only/app/: __init__.py  app.py  state.py
levels/level_01_prompt_only/src/: app.py  config.py  llm_client.py  metrics.py
levels/level_02_prompt_engineering/: README.md  config.yaml  main.py  main_copy.py  pyproject.toml  rxconfig.py
levels/level_02_prompt_engineering/app/: __init__.py  app.py  state.py
levels/level_02_prompt_engineering/src/: config.py  llm_client.py  ollama_models.py  prompts.py
levels/level_03_basic_rag/: README.md
levels/level_04_advanced_rag/: README.md
levels/level_05_single_agent/: README.md
levels/level_06_workflow_patterns/: README.md
levels/level_07_multi_agent/: .env.example  README.md  config.yaml  main.py  pyproject.toml  rxconfig.py
levels/level_07_multi_agent/app/: __init__.py  app.py  state.py
levels/level_08_mcp/: README.md
levels/level_09_harness/: README.md
levels/level_10_sub_agents/: README.md
levels/level_11_skills/: README.md
levels/level_12_autonomous/: README.md
src/: models.py
src/agents/: facilitator.py  graph.py  researcher.py  state.py  synthesizer.py  validator.py
src/evaluation/: bm25_tuner.py  metrics.py
src/generation/: llm_client.py  prompts.py
src/ingestion/: chunkers.py  loaders.py  pipeline.py  vision_describer.py
src/retrieval/: hybrid_search.py  metadata_filter.py
src/ui/: app.py
src/ui/pages/: chat.py  (+3 more)
tests/: conftest.py
(+20 files in other folders)
